test/output/cm_copied_cm.yaml
apiVersion: v1
data:
  configmap.data: |
    ns=default
    labels=originalLabel
    labelscount=1
  game.properties: |
    enemies=predators
    lives=3
  ui.properties: "color.good=green\ncolor.bad=red \n"
kind: ConfigMap
metadata:
  labels:
    originalLabel: isHere
  name: copied-cm
  namespace: ns2
