test/output/nginx.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  creationTimestamp: 
  labels:
    app: nginx_is_mutated
    cli: test
    isMutated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: 
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        resources: {}
        imagePullPolicy: Always
  strategy: {}
status: {}
