test/output/np_deny-all-traffic.yaml
metadata:
  annotations: {}
  labels:
    policyname: default
  name: deny-all-traffic
  namespace: ns2
podSelector:
  matchExpressions: []
  matchLabels: {}
policyTypes: []
spec: 
kind: NetworkPolicy
apiVersion: extensions/v1beta1
