test/output/op_overlay_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  creationTimestamp: 
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: 
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources: {}
        imagePullPolicy: IfNotPresent
      - name: ghost
        image: ghost:latest
        resources: {}
        imagePullPolicy: IfNotPresent
  strategy: {}
status: {}
