test/output/output_mutate_imagePullPolicy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: 
  labels:
    app: nginxlatest
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxlatest
  strategy: {}
  template:
    metadata:
      creationTimestamp: 
      labels:
        app: nginxlatest
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: IfNotPresent
        name: nginx
        resources: {}
status: {}
