test/output/output_mutate_pod_disable_automoutingapicred.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: 
  labels:
    app: myapp
  name: myapp-pod
spec:
  automountServiceAccountToken: false
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: nginx
    resources: {}
  serviceAccountName: default
status: {}
