test/output/output_mutate_validate_qos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2017-05-31T12:56:35Z"
  labels:
    test: qos
  name: qos-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: "2017-05-31T12:56:35Z"
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources:
          limits:
            cpu: 50m
            memory: 300Mi
status: {}
