test/output/pod-with-default-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-default-volume
  creationTimestamp: "2020-09-21T12:56:35Z"
spec:
  containers:
  - image: registry.k8s.io/test-webserver
    name: test-container
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-wkknl
      readOnly: true
  volumes:
  - name: default-token-wkknl
    secret:
      defaultMode: 420
      secretName: default-token-wkknl
