test/output/pod-with-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-hostpath
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
spec:
  containers:
  - image: registry.k8s.io/test-webserver
    name: test-container
    volumeMounts:
    - mountPath: /tmp/foo
      name: host-volume
  volumes:
  - name: host-volume
    hostPath:
      path: "/tmp/foo"
